--- a/CodeAnalysis/App.xaml
+++ b/CodeAnalysis/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="CodeAnalysis.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             StartupUri="Views/View.xaml">
+             StartupUri="Views/MainView.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
