--- a/CodeAnalysis/App.xaml
+++ b/CodeAnalysis/App.xaml
@@ -5,7 +5,7 @@
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
-                <ResourceDictionary Source="ExpressionDark.xaml" />
+                <ResourceDictionary Source="Themes/TreeListView.xaml" />
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
